@@ -1,6 +1,6 @@
 /* This testcase is part of GDB, the GNU debugger.
 
-   Copyright 1996-2013 Free Software Foundation, Inc.
+   Copyright 1996, 1999, 2003, 2007, 2008, 2009 Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -400,6 +400,10 @@ static struct { char c; } chartest[256];
 
 int main()
 {
+#ifdef usestubs
+  set_debug_traps();
+  breakpoint();
+#endif
   int i;
 
   for (i = 0; i < 256; i++)
@@ -428,7 +432,7 @@ int main()
   /* An infinite loop that first clears all the variables and then
      calls each function.  This "hack" is to make testing random
      functions easier - "advance funN" is guaranteed to have always
-     been preceded by a global variable clearing zed call.  */
+     been preceeded by a global variable clearing zed call.  */
 
   while (1)
     {
